CSS style the html

--- a/index.html
+++ b/index.html
@@ -7,7 +7,46 @@
         <link rel="stylesheet" href="./styles.css">
     </head>
     <body>
-        <h1>calculated `W`</h1>
+
+        <div class="calculator-flex-container">
+            <div class="calculator-brand flex-item"><b>scientific</b> <em><span>flat-world</span></em> <b>calculator</b></div>
+            <div class="calculator-screen flex-item">
+                <p class="calculator-screen-text">0.00</p>
+            </div>
+            <div class="calculator-buttons-container">
+                    <div class="calculator-row">
+                        <button id="C" class="btnOrange">C</button>
+                        <button id="Del" class="btnOrange">Del</button>
+                        <button id="%">%</button>
+                        <button id="/">/</button>
+                    </div>
+                    <div class="calculator-row">
+                        <button id="7">7</button>
+                        <button id="8">8</button>
+                        <button id="9">9</button>
+                        <button id="*">*</button>
+                    </div>
+                    <div class="calculator-row">
+                        <button id="4">4</button>
+                        <button id="5">5</button>
+                        <button id="6">6</button>
+                        <button id="-">-</button>
+                    </div>
+                    <div class="calculator-row">
+                        <button id="1">1</button>
+                        <button id="2">2</button>
+                        <button id="3">3</button>
+                        <button id="+">+</button>
+                    </div>
+                    <div class="calculator-row bottom-row">
+                        <button id="btn0">0</button>
+                        <button id="btnDot">.</button>
+                        <button id="btnEqual">=</button>
+                    </div>
+            </div>
+        </div>
+
+
     </body>
 </html>
 
